<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_news">

    <fragment
        android:id="@+id/navigation_videos"
        android:name="com.academy.android.ui.videos.VideosFragment"
        android:label="@string/title_videos"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.academy.android.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.academy.android.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_become_speaker"
            app:destination="@id/navigation_become_speaker"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_right" />
        <action
            android:id="@+id/action_edit_profile"
            app:destination="@id/navigation_edit_profile"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_become_speaker"
        android:name="com.academy.android.ui.profile.ProfBecomeSpeakerFragment"
        android:label="@string/become_speaker_label"
        tools:layout="@layout/fragment_prof_become_speaker" />

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.academy.android.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile_label"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_back_to_profile"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_right" />
    </fragment>

</navigation>