<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfBecomeSpeakerFragment">

    <TextView
        android:id="@+id/report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:text="@string/form_report_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/field_report_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/report_hint"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/profile_field_bg"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="@id/report_title"
        app:layout_constraintTop_toBottomOf="@id/report_title"/>

    <TextView
        android:id="@+id/report_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:text="@string/field_report_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_report_title"/>

    <EditText
        android:id="@+id/field_report_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_report_description"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/profile_field_bg"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:paddingTop="15dp"
        android:paddingBottom="150dp"
        app:layout_constraintStart_toStartOf="@id/report_description"
        app:layout_constraintTop_toBottomOf="@id/report_description"/>

    <Button
        android:id="@+id/btn_send_claim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/report_send_btn_text"
        android:background="@drawable/button_bg_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>