<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <ImageView
        android:id="@+id/btn_logout"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toTopOf="@id/main_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_prof_edit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_prof_edit"
        app:layout_constraintBottom_toTopOf="@id/main_guideline"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cardCornerRadius="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_guideline">

        <ImageView
            android:id="@+id/editProfileCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/profile_image_border"
            android:scaleType="centerCrop"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="69dp"
            tools:src="@drawable/profile_ava" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/profileCard"
        app:layout_constraintTop_toBottomOf="@id/profileCard"
        tools:text="Student" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_position"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/field_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_field_bg"
                android:elevation="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="40dp"
                android:text="@string/email_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginEnd="15dp" />

            <TextView
                android:id="@+id/text_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:elevation="5dp"
                app:layout_constraintStart_toStartOf="@+id/field_user_email"
                app:layout_constraintBottom_toBottomOf="@id/field_user_email"
                tools:layout_editor_absoluteY="288dp"
                tools:text="ermac95@mail.ru" />

            <TextView
                android:id="@+id/field_mentors_orgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/profile_field_bg"
                android:elevation="5dp"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp"
                android:text="@string/mentors_orgs"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/field_user_email"
                app:layout_constraintTop_toBottomOf="@id/field_user_email" />

            <ImageView
                android:id="@+id/arrow_mentors_orgs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_arrow_forward"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@id/field_mentors_orgs"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/field_become_speaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/profile_field_bg"
                android:elevation="5dp"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp"
                android:text="@string/become_speaker"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/field_mentors_orgs"
                app:layout_constraintTop_toBottomOf="@id/field_mentors_orgs" />

            <ImageView
                android:id="@+id/arrow_become_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_arrow_forward"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@id/field_become_speaker"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/field_creators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/profile_field_bg"
                android:elevation="5dp"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp"
                android:text="@string/creators"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/field_become_speaker"
                app:layout_constraintTop_toBottomOf="@id/field_become_speaker" />

            <ImageView
                android:id="@+id/arrow_creators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_arrow_forward"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@id/field_creators"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/field_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/profile_field_bg"
                android:elevation="5dp"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp"
                android:text="@string/question"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/field_creators"
                app:layout_constraintTop_toBottomOf="@id/field_creators"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/arrow_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_arrow_forward"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@id/field_question"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
